[package]
name = "bevy-lod-groups"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_lod_groups"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"

[dev-dependencies]
bevy_dolly = "0.0.2"


[[example]]
name = "basic"
path = "examples/basic.rs"
